# flare

./: Dockerfile  Makefile  README.md  pyproject.toml  template.yaml  voice-template.yaml
.github/workflows/: build.yaml
demo/: demo-template.yaml  trigger.sh
demo/failing-lambda/: handler.py
docs/: architecture.md  voice-setup-guide.md
scripts/: local_invoke.py  local_setup.sh  seed_logs.py
src/flare/: caller.py  config.py  events.py  handler.py  logs.py  prefetch.py  tools.py  triage.py  voice_handler.py
src/flare/prompts/: prefetch.txt  reasoning.txt  triage.txt  voice_system.txt
tests/: conftest.py  test_caller.py  test_config.py  test_events.py  test_handler.py  test_logs.py  test_prefetch.py  test_tools.py  test_triage.py  test_voice_handler.py
tests/fixtures/: alarm_event.json  nova_response.txt  sample_logs.txt  schedule_event.json  subscription_event.json
